--- a/style.css
+++ b/style.css
@@ -2,11 +2,7 @@
    Global Styles
    =========================== */
 * {
-   background-color: var(--base-colour);
    box-sizing: border-box;
-   color: var(--text-colour);
-   font-family: monospace;
-   font-size: 18px;
    margin: 0;
    padding: 0;
 
